@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-19T02:54:41Z",
-  "count_outdated" : 201,
-  "uniques_outdated" : 141,
+  "timestamp" : "2023-07-24T08:23:01Z",
+  "count_outdated" : 202,
+  "uniques_outdated" : 142,
   "count" : 203,
   "uniques" : 143,
   "clones" : [
-    {
-      "timestamp": "2023-07-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-16T00:00:00Z",
       "count": 1,
